# TicketRushBE

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: __init__.py  admin.py  auth.py  checkout.py  events.py  queue.py  recommendations.py  seats.py  ws.py
app/core/: config.py  exceptions.py  logging.py  redis.py  responses.py  security.py  telemetry.py
app/db/: data.sql  schema-v2.sql  schema.sql  session.py
app/models/: __init__.py  all_models.py  enums.py  event.py  interaction.py  order.py  queue.py  seat.py  ticket.py  user.py
app/repositories/: analytics.py  event.py  interaction.py  order.py  queue.py  seat.py  user.py
app/schemas/: auth.py  checkout.py  common.py  dashboard.py  event.py  queue.py  recommendation.py  seat.py
app/services/: auth.py  bootstrap.py  checkout.py  dashboard.py  email.py  embedding.py  events.py  queue.py  realtime.py  recommendation.py  seats.py
app/workers/: process_queue.py  release_expired_holds.py
ops/grafana/provisioning/dashboards/: default.yml
ops/prometheus/: prometheus.yml
tests/: test_password_reset.py  test_profile_update.py
ticketrush_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
