[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketrush-backend"
version = "0.1.0"
description = "Python backend for TicketRush high-concurrency event ticketing."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.1,<4.1",
  "email-validator>=2.2.0",
  "alembic>=1.14.0",
  "redis>=5.2.0",
  "prometheus-client>=0.21.0",
  "structlog>=24.4.0",
  "APScheduler>=3.10.4",
  "qrcode>=8.0",
  "python-multipart>=0.0.18",
  "httpx>=0.28.1",
  "aiosqlite>=0.22.1",
  "pgvector>=0.4.2",
  "numpy>=2.0.0",
  "onnxruntime>=1.20.0",
  "tokenizers>=0.20.0",
  "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.2",
  "ruff>=0.7.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
